where did the dot go?

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,5 +15,5 @@ services:
       dockerfile: Dockerfile.dev
     volumes:
       - /app/node_modules
-      - :/client
+      - .:/client
     command: ['npm', 'run', 'test']
