--- a/.travis.yml
+++ b/.travis.yml
@@ -8,16 +8,15 @@ before-install:
 script:
   - docker run -e CI=true joaquimbarreto/docker-react npm run test
 
-  deploy:
-    edge: true
-    provider: elasticbeanstalk
-    region: "eu-central-1"
-    app: "docker-react"
-    env: "DockerReact-env"
-    bucket_name: "elasticbeanstalk-eu-central-1-719403805032"
-    bucket_path: "docker-react"
-    on:
-      branch: master
-    access_key_id: $AWS_ACCESS_KEY
-    secret_access_key: $AWS_SECRET_KEY
-
+deploy:
+  edge: true
+  provider: elasticbeanstalk
+  region: 'eu-central-1'
+  app: 'docker-react'
+  env: 'DockerReact-env'
+  bucket_name: 'elasticbeanstalk-eu-central-1-719403805032'
+  bucket_path: 'docker-react'
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
